cluster/apps/iot/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: frigate
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
