cluster/apps/iot/frigate/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: frigate
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://frigate-adm.${CLUSTER_DOMAIN}"
    gethomepage.dev/group: IoT
    gethomepage.dev/weight: "50"
    gethomepage.dev/name: Frigate
    gethomepage.dev/icon: frigate.png
    gethomepage.dev/description: NVR with Coral TPU object detection
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "frigate-adm.${CLUSTER_DOMAIN}"
  rules:
    - filters:
        - type: ExternalAuth
          externalAuth:
            backendRef:
              group: ""
              kind: Service
              name: authelia
              namespace: authelia
              port: 80
            protocol: HTTP
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - cookie
                - authorization
                - x-forwarded-proto
                - x-forwarded-host
                - x-forwarded-uri
                - x-forwarded-for
                - accept
              allowedResponseHeaders:
                - remote-user
                - remote-groups
                - remote-name
                - remote-email
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frigate
          port: 80
